=> camera fixed to snake => apple according to number of player

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
     </head>
 
     <body>
-        <canvas id="cnvs" width="<%= tileCount*gridSize %>" height="<%= tileCount*gridSize %>"></canvas>
+        <canvas id="cnvs" width="400" height="400"></canvas>
     </body>
 </html>
